--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -141,11 +141,11 @@ li {
 	@media only screen and(600px<=width) {
 		position: relative;
 		box-sizing: border-box;
-		padding:0;
+		padding: 0;
 		width: 88px;
 		//max-width: 88px;
 		flex: 1 0 auto;
-		border:none;
+		border: none;
 	}
 }
 
@@ -170,7 +170,7 @@ li {
 	}
 	@media only screen and (600px<=width) {
 		box-sizing: border-box;
-		width: 88px;;
+		width: 88px;
 		padding: 0 8px;
 		height: 582px;
 	}
@@ -261,7 +261,7 @@ li {
 
 	&_li--first-item {
 		@extend .nav_li;
-		margin-top: -2px;
+		// margin-top: -2px;
 
 		@media only screen and (500px<=width) {
 			margin-top: 0;
@@ -299,37 +299,58 @@ button:hover {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 52px;
-	width: 54px;
-	align-self: center;
+	position: absolute;
+	height: 56px;
+	width: 56px;
 	aspect-ratio: 1/1;
-	margin: 4px 4px 4px 0;
+	left: 299px;
+	bottom: 73.5px;
 	padding: 0;
-	box-sizing: border-box;
-	/* background-color: rgb(29, 155, 240);
-	border-radius: 50%; */
+	//border: solid red;
 
 	@media screen and(500px<=width) {
-		margin-top: 4px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 52px;
+		width: 54px;
+		align-self: center;
+		aspect-ratio: 1/1;
+		margin: 4px 4px 4px 0;
+		padding: 0;
+		box-sizing: border-box;
+		left: initial;
+		bottom: initial;
+		/* background-color: rgb(29, 155, 240);
+	border-radius: 50%; */
+	}
+
+	@media screen and (600px<=width) {
 	}
 }
 .tweet-btn-wrapper {
-	//background-color: green;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
-	//border:1px solid green;
-	height: 52px;
-	width: 52px;
-	min-height: 52px;
-	min-height: 52px;
-	aspect-ratio: 1/1;
-	margin: 4px 0 4px 4px;
+	width: 100%;
+	height: 100%;
 	padding: 0;
 	box-sizing: border-box;
 	background-color: rgb(29, 155, 240);
 	border-radius: 50%;
+	box-shadow:0px 1px 8px 1px rgba(101,119,134,0.4);
+
+	@media screen and(500px<=width) {
+		//background-color: green;
+
+		//border:1px solid green;
+		height: 52px;
+		width: 52px;
+		min-height: 52px;
+		min-height: 52px;
+		aspect-ratio: 1/1;
+		margin: 4px 0 4px 4px;
+	}
 }
 
 .write-tweet-icon {
@@ -338,6 +359,8 @@ button:hover {
 	margin: 0;
 	padding: 0;
 	fill: white;
+	position: relative;
+
 }
 
 .profile-container {
@@ -406,16 +429,14 @@ button:hover {
 	@media only screen and (600px<=width) {
 		//margin-left: 88px;
 		width: 100%;
-		flex:1 1  auto;
-		border-left:var(--main-border-style);
+		flex: 1 1 auto;
+		border-left: var(--main-border-style);
 		box-sizing: border-box;
-
 	}
 
 	@media only screen and (688px<=width) {
 		width: 600px;
-		flex:0 1 auto;
-
+		flex: 0 1 auto;
 	}
 }
 
@@ -428,7 +449,7 @@ button:hover {
 	padding: 0;
 	height: var(--header-height);
 	width: 100%;
-	max-width:100%;
+	max-width: 100%;
 	background-color: rgba($color: #ffffff, $alpha: 0.8);
 	backdrop-filter: blur(10px);
 	transition: margin-top 0.16s;
@@ -451,12 +472,10 @@ button:hover {
 		position: relative;
 		width: 100%;
 		//border:1px solid red;
-
 	}
 
 	@media only screen and (688px<=width) {
 		width: inherit;
-
 	}
 
 	&_header-top {
@@ -776,11 +795,10 @@ button:hover {
 	display: none;
 
 	@media screen and(699px<=width) {
-display: flex;
-//width: 150px;
-flex: 1 1 auto;
-border-left: var(--main-border-style);
-
+		display: flex;
+		//width: 150px;
+		flex: 1 1 auto;
+		border-left: var(--main-border-style);
 	}
 	/* //flex-direction: column;
 		//gap: 1rem;
