--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -816,7 +816,7 @@ button:hover {
 #middle-container::-webkit-scrollbar {
 	display: none;
 }
-.custom-containers-margin{
+.custom-containers-margin {
 	width: 20px;
 	//margin-right: 20px;
 	//background-color: #1d8ad3;
@@ -830,42 +830,45 @@ button:hover {
 		width: auto;
 		flex: 2 1 auto;
 		flex-direction: column;
-		 margin-right:  10px;
+		margin-right: 10px;
 		// border-left: var(--main-border-style);
 	}
 
 	@media screen and(988px<=width) {
+		overflow-y: scroll;
 		// width: 290px;
 		//margin-left: 17px;
 	}
 }
 
 .searchBar-wrapper {
-
 	display: none;
 	@media screen and(988px<=width) {
 		display: flex;
 		width: 290px;
 		height: 44px;
+		min-height: 44px;
 		margin-bottom: 16.5px;
+		box-sizing: border-box;
 		//background-color: #1d8ad3;
 		//margin-right: 10px;
 		//border-radius: 50%;
 	}
 }
 
-.searchBar{
+.searchBar {
+	@media screen and(988px<=width) {
 	width: 100%;
 	height: 100%;
-	border:none;
-	border-radius:99px;
+	border: none;
+	border-radius: 99px;
 	background-color: rgba(239, 243, 244, 255);
 	margin-top: 4.5px;
 	box-sizing: border-box;
+	}
 }
 
 .trending-wrapper {
-
 	display: none;
 	@media screen and(988px<=width) {
 		display: flex;
@@ -874,12 +877,13 @@ button:hover {
 		height: 500px;
 		background-color: rgba(239, 243, 244, 255);
 		margin-top: 4.5px;
-			border-radius:17px;
-			//padding: 15px 0 0 0;
-			box-sizing:border-box;
+		margin-bottom: 16px;
+		border-radius: 17px;
+		//padding: 15px 0 0 0;
+		box-sizing: border-box;
 	}
 
-	&_cards-header{
+	&_cards-header {
 		display: flex;
 		align-items: center;
 		height: 48px;
@@ -887,14 +891,18 @@ button:hover {
 		font-family: chirpBold;
 		width: 100%;
 		width: 288px;
-		padding:12px 16px;
+		padding: 12px 16px;
 		box-sizing: border-box;
-		span{
+		span {
 			//margin:0 17px;
+			border: none;
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
 		}
 	}
 
-	&_cards{
+	&_cards {
 		display: flex;
 		width: 288;
 		height: 92px;
@@ -902,11 +910,15 @@ button:hover {
 		box-sizing: border-box;
 	}
 
-	&_cards-footer{
+	&_cards-footer {
 		width: 288px;
 		height: 52px;
 		box-sizing: border-box;
 		padding: 16px;
+		a {
+			color: rgb(29, 155, 240);
+			text-decoration: none;
+		}
 	}
 }
 
@@ -914,8 +926,51 @@ button:hover {
 	width: 100%;
 	display: none;
 	@media screen and(988px<=width) {
+		display: flex;
+		flex-direction: column;
+		background-color: rgba(239, 243, 244, 255);
+		border-radius: 17px;
+	}
+
+	&_cards-header {
+		display: flex;
+		align-items: center;
+		height: 48px;
+		font-size: 20px;
+		font-family: chirpBold;
+		width: 100%;
+		width: 288px;
+		padding: 12px 16px;
+		box-sizing: border-box;
+		span {
+			//margin:0 17px;
+			border: none;
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+	}
+
+	&_cards {
+		display: flex;
+		width: 288;
+		height: 72px;
+		padding: 12px 16px;
+		box-sizing: border-box;
+	}
+
+	&_cards-footer {
+		width: 288px;
+		height: 52px;
+		box-sizing: border-box;
+		padding: 16px;
+		a {
+			color: rgb(29, 155, 240);
+			text-decoration: none;
+		}
 	}
 }
+
 /* //
 		//gap: 1rem;
 		//padding-left: 2rem;
