--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -160,8 +160,13 @@ li {
 
 	@media only screen and(988px<=width) {
 		width: 68px;
-		flex: 1 1 auto;
+		flex: 1 0 auto;
 		border: none;
+	}
+
+	@media screen and (1008px<=width){
+		width: 88px;
+
 	}
 }
 
@@ -494,6 +499,7 @@ button:hover {
 	}
 
 	@media only screen and (988px<=width) {
+		flex: 0 0 auto;
 		//margin-right: 30px;
 	}
 }
@@ -536,6 +542,8 @@ button:hover {
 	@media only screen and (688px<=width) {
 		position: fixed;
 		width: inherit;
+		max-width: 598px;
+		box-sizing: border-box;
 	}
 
 	&_header-top {
@@ -870,6 +878,7 @@ margin: 0 17px 0 0;
 .custom-containers-margin {
 	display: none;
 	@media screen and (988px<=width) {
+		display: flex;
 		width: 20px;
 		//margin-right: 20px;
 		//background-color: #1d8ad3
@@ -888,10 +897,11 @@ margin: 0 17px 0 0;
 		// border-left: var(--main-border-style);
 	}
 
-	@media screen and(988px<=width) {
+	@media screen and(988px<=width) {	width: 290px;
+		flex: 0 0 auto;
 		margin-right: 10px;
 		overflow-y: scroll;
-		// width: 290px;
+		 max-width: 290px;
 		//margin-left: 17px;
 	}
 }
@@ -1023,6 +1033,19 @@ margin: 0 17px 0 0;
 			color: rgb(29, 155, 240);
 			text-decoration: none;
 		}
+	}
+}
+
+.whiteSpace-right{
+	display: none;
+	@media screen and (989px<=width){
+		display: flex;
+		flex:1 0 auto
+	}
+
+	@media screen and (1008px<=width){
+		display: none;
+
 	}
 }
 
