--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -20,11 +20,8 @@
 }
 
 ::placeholder {
-	//opacity: 0.72;
-	//background-color: rgba(255,255,255,0.72);
 	color: rgba(15, 20, 25, 0.72);
 	font-family: chirp;
-	//z-index: 1;
 }
 
 section,
@@ -43,11 +40,6 @@ li {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	//border: 0.1rem solid green;
-}
-.nav-icons {
-	width: 26.25px;
-	height: 26.25px;
 }
 
 .hidden500 {
@@ -93,10 +85,6 @@ li {
 	flex-direction: column;
 }
 
-/* .icon-fill {
-	fill: black;
-} */
-
 .App {
 	display: flex;
 	flex-direction: column;
@@ -105,7 +93,6 @@ li {
 	padding: 0;
 	overflow-x: hidden;
 	overflow-y: hidden;
-	//background-color: white;
 	font-family: chirp;
 	@media only screen and (500px<=width) {
 		flex-direction: row;
@@ -113,7 +100,7 @@ li {
 	}
 }
 
-.left-container {
+.nav-container {
 	//named based on desktop position..will be at bottom on mobile viewports
 	z-index: 2;
 	position: fixed;
@@ -125,7 +112,6 @@ li {
 	height: 53.5px;
 	width: 100%;
 	box-sizing: border-box;
-	//border: solid red;
 	background-color: white;
 
 	@media only screen and (500px<=width) {
@@ -164,10 +150,14 @@ li {
 		border: none;
 	}
 
-	@media screen and (1008px<=width){
+	@media screen and (1008px<=width) {
 		width: 78px;
-		flex:1 0 auto;
-
+		flex: 1 0 auto;
+	}
+	@media screen and (1025px<=width) {
+		width: 96.5px;
+		align-items: end;
+		//flex:1 0 auto;
 	}
 }
 
@@ -176,8 +166,6 @@ li {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	//background-color: #1d8ad3;
-	//border: solid red;
 
 	@media only screen and (500px<=width) {
 		display: flex;
@@ -204,24 +192,21 @@ li {
 		align-self: flex-end;
 	}
 
-	@media screen and (1008px<=width){
+	@media screen and (1008px<=width) {
 		width: 68px;
-
 	}
-
-
-
-	// @media screen and (688px<=width) {
-	// 	padding: 0;
-	// }
+	@media screen and (1025px<=width) {
+		width: 88px;
+		//flex:1 0 auto;
+	}
 
 	&_twitter-logo-box {
 		display: none;
-		height: 100%;
-		width: 100%;
-		align-items: center;
-		margin: 0;
-		padding: 0;
+		//height: 100%;
+		//width: 100%;
+		//align-items: center;
+		//margin: 0;
+		//padding: 0;
 		//box-sizing: border-box;
 		//border: solid green;
 
@@ -241,10 +226,10 @@ li {
 	&_twitter-logo {
 		display: flex;
 		//height: 24.4px;
-		padding: 0;
-		margin: 0;
+		/* padding: 0;
+		margin: 0; */
 		//flex: 1 1 auto;
-		fill: rgb(29, 155, 240);
+		//fill: rgb(29, 155, 240);
 
 		@media only screen and (500px<=width) {
 			display: flex;
@@ -281,8 +266,6 @@ li {
 			//margin:auto 0 auto auto;
 			width: 100%;
 		}
-
-
 	}
 
 	&_li {
@@ -303,13 +286,10 @@ li {
 		@media only screen and (688px<=width) {
 			margin: 0 0;
 		}
-
-
 	}
 
 	&_li--first-item {
 		@extend .nav_li;
-		// margin-top: -2px;
 
 		@media only screen and (500px<=width) {
 			margin-top: 0;
@@ -321,16 +301,19 @@ li {
 		justify-content: center;
 		align-items: center;
 		text-decoration: none;
-
 	}
-}
-svg {
-	border-radius: 50%;
-	padding: 8px;
-	overflow: visible;
-}
-svg:active {
-	background-color: lightgray;
+
+	&_nav-icons {
+		width: 26.25px;
+		height: 26.25px;
+		border-radius: 50%;
+		padding: 8px;
+		overflow: visible;
+	}
+
+	&_nav-icons:active {
+		background-color: lightgray;
+	}
 }
 
 /* li:hover {
@@ -389,21 +372,22 @@ button:hover {
 
 	@media screen and(1008px<=width) {
 		width: 68px;
+	}
 
+	@media screen and(1024px<=width) {
+		width: 88px;
+		margin-right: 1px;
 	}
 }
 .tweet-btn-wrapper {
-	display: flex;
+	@extend .wrappers--flex;
+
 	justify-content: center;
 	align-items: center;
-	width: 100%;
-	height: 100%;
-	padding: 0;
 	box-sizing: border-box;
 	background-color: rgb(29, 155, 240);
 	border-radius: 50%;
 	box-shadow: 0px 1px 8px 1px rgba(101, 119, 134, 0.4);
-
 
 	@media screen and(500px<=width) {
 		//background-color: green;
@@ -422,9 +406,6 @@ button:hover {
 		padding: 4px;
 		margin: 0;
 	}
-
-
-
 }
 
 .write-tweet-icon {
@@ -433,17 +414,18 @@ button:hover {
 	margin: 0;
 	padding: 0;
 	fill: white;
-	position: relative;
+	position: absolute;
+	//overflow: visible;
 }
 
 .profile-container {
 	display: none;
-	box-sizing: border-box;
 
 	@media only screen and (500px<=width) {
 		display: flex;
 		height: 64px;
 		width: 64px;
+		box-sizing: border-box;
 		//padding: 4px;
 		padding: 0 0 0 0;
 		margin: 12px 2px 12px -2px;
@@ -476,8 +458,8 @@ button:hover {
 		}
 	}
 	@media screen and(688px<=width) {
-			display: none;
-		}
+		display: none;
+	}
 }
 
 #profile-pill:hover {
@@ -486,13 +468,10 @@ button:hover {
 
 .middle-container {
 	width: 100%;
-	flex: 1 1 auto;
+	//flex: 1 1 auto;
 	display: flex;
 	flex-direction: column;
 	overflow-y: scroll;
-	//scroll-behavior: smooth;
-	//order: 1;
-	//z-index: 1;
 
 	@media only screen and (500px<=width) {
 		flex-basis: 0 1 auto;
@@ -523,10 +502,10 @@ button:hover {
 }
 
 .header {
-	position: fixed;
-	//border:solid green;
+	position: absolute;
 	display: flex;
 	flex-direction: column;
+	top: -0.5px;
 	margin: 0;
 	padding: 0;
 	height: var(--header-height);
@@ -537,7 +516,6 @@ button:hover {
 	transition: margin-top 0.16s;
 	transition-timing-function: ease;
 	transition-delay: 0ms;
-	//border:1px solid green;
 
 	@media only screen and (500px<=width) {
 		position: fixed;
@@ -594,7 +572,7 @@ button:hover {
 	}
 	&_profile-picture {
 		margin-left: 16px;
-		margin-top: 10px;
+		margin-top: 10.5px;
 		width: 32px;
 		height: 32px;
 		border-radius: 50%;
@@ -619,7 +597,7 @@ button:hover {
 	}
 
 	&_twitter-logo {
-		height: 24.4px;
+		height: 25px;
 		display: flex;
 		padding: 0;
 		margin: 0;
@@ -641,7 +619,6 @@ button:hover {
 		margin: 0;
 		padding: 0;
 		border-bottom: var(--main-border-style);
-		//font-weight:500;
 	}
 
 	&_ul {
@@ -665,8 +642,8 @@ button:hover {
 		font-weight: 500;
 		line-height: 20px;
 		padding: 0 0;
-
 		box-sizing: border-box;
+		text-size-adjust: 100%;
 	}
 	&_anchor {
 		display: flex;
@@ -682,8 +659,7 @@ button:hover {
 		color: rgb(83, 100, 113);
 		box-sizing: border-box;
 		div {
-			font-family: chirpBold;
-			//font-weight: bold;
+			font-family: chirpMedium;
 		}
 		span {
 			display: none;
@@ -691,57 +667,37 @@ button:hover {
 	}
 	&_anchor--clicked {
 		@extend .header_anchor;
-		display: flex;
 		flex-direction: column;
-		justify-content: center;
-		padding: 17px 16px 0 16px;
-		//align-items: space-between;
+		padding: 16px 16px 0 16px;
 		div {
-			flex-basis: 3fr;
 			font-family: chirpBold;
 			color: black;
 			justify-self: center;
-			/* border-bottom:3px solid green;
-				border-radius: 1%; */
-			//border-block-end: solid green;
 		}
 		span {
-			//display: inline-flex;
-			flex-basis: 1fr;
 			display: inline-block;
-			//position: absolute;
-			margin: 0;
-			margin-top: auto;
+			margin: auto 0 1px 0;
 			justify-self: end;
-			//align-self: end;
-			background-color: #1d8ad3;
-			width: 50%;
+			background-color: rgb(29, 155, 240);
+			width: 65%;
 			height: 4px;
 			border-radius: 99px;
 			border: none;
 		}
 	}
 
-	&_underline-bar {
+	/* &_underline-bar {
 		background-color: #1d8ad3;
-	}
+	} */
 	a:active {
 		background-color: lightgray;
 	}
-	/* a:focus{
-							background-color: red;
-						} */
 }
 
 .timeline-wrapper {
 	width: 100%;
 	padding: 0;
-
-	overflow-y: visible;
-
-	@media screen and (688px<=width) {
-		margin-top: var(--header-height);
-	}
+	margin-top: var(--header-height);
 }
 
 .tweet-area {
@@ -751,7 +707,6 @@ button:hover {
 	//height: auto;
 	margin: 0;
 	padding: 4px 0 7.5px 0;
-	//border:1px solid red;
 	box-sizing: border-box;
 	border-bottom: var(--main-border-style);
 
@@ -850,7 +805,7 @@ button:hover {
 
 		&--light-icons {
 			@extend .tweet-area_tweet-icons;
-			fill: rgba(29, 155, 240,0.5);
+			fill: rgba(29, 155, 240, 0.5);
 		}
 	}
 
@@ -879,8 +834,8 @@ button:hover {
 		border: none;
 		//margin-top: 1.5rem;
 
-		@media screen and (688px<=width){
-margin: 0 17px 0 0;
+		@media screen and (688px<=width) {
+			margin: 0 17px 0 0;
 		}
 	}
 
@@ -890,9 +845,10 @@ margin: 0 17px 0 0;
 	}
 }
 
-#middle-container::-webkit-scrollbar {
-	display: none;
-}
+/* .middle-container::-webkit-scrollbar {
+
+	z-index: 5;
+} */
 .custom-containers-margin {
 	display: none;
 	@media screen and (988px<=width) {
@@ -915,11 +871,12 @@ margin: 0 17px 0 0;
 		// border-left: var(--main-border-style);
 	}
 
-	@media screen and(988px<=width) {	width: 290px;
+	@media screen and(988px<=width) {
+		width: 290px;
 		flex: 0 0 auto;
 		margin-right: 10px;
 		overflow-y: scroll;
-		 max-width: 290px;
+		max-width: 290px;
 		//margin-left: 17px;
 	}
 }
@@ -1054,18 +1011,17 @@ margin: 0 17px 0 0;
 	}
 }
 
-.whiteSpace-right{
+.whiteSpace-right {
 	display: none;
-	@media screen and (989px<=width){
+	@media screen and (989px<=width) {
 		display: flex;
-		flex:1 0 auto
+		flex: 1 0 auto;
 	}
 
-	@media screen and (1008px<=width){
+	@media screen and (1008px<=width) {
 		display: flex;
 		width: 10px;
-		flex:1 0 auto;
-
+		flex: 1 0 auto;
 	}
 }
 
