changed tweet icon positioning to better handle viewport changes (based on bottom and right distance)

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -324,8 +324,8 @@ button:hover {
 	height: 56px;
 	width: 56px;
 	aspect-ratio: 1/1;
-	left: 299px;
-	bottom: 73.5px;
+	right: 20px;
+	bottom: 73px;
 	padding: 0;
 	//border: solid red;
 
