--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -109,7 +109,6 @@ li {
 } */
 
 .nav-container {
-	//named based on desktop position..will be at bottom on mobile viewports
 	z-index: 3;
 	position: sticky;
 	//overflow-y: visible;
@@ -128,8 +127,9 @@ li {
 	background-color: white;
 
 	@media only screen and (500px<=width) {
-		position: relative;
+		//position: sticky;
 		flex-direction: column;
+		top:-0.5px;
 		flex: 1 0 auto;
 		height: 100vh;
 		min-height: 100vh;
@@ -463,9 +463,9 @@ button:hover {
 	@media only screen and (500px<=width) {
 		flex-basis: 0 1 auto;
 		width: 100%;
-		height: 100vh;
-		position: relative;
-		top:unset;
+		height: max-content;
+		position: sticky;
+		top:unset !important;
 		box-sizing: border-box;
 		border-left: var(--main-border-style);
 		border-right: var(--main-border-style);
@@ -508,14 +508,14 @@ button:hover {
 	transition-delay: 0ms;
 
 	@media only screen and (500px<=width) {
-		position: sticky;
-		width: 100%;
-		max-width: 100%;
+		//position: sticky;
+		//width: 100%;
+		//max-width: 100%;
 
-		top: 0;
-		margin: 0;
-		margin-top: 0px !important;
-		padding: 0;
+		top: -0.5px !important;
+		//margin: 0;
+		//margin-top: 0px !important;
+		//padding: 0;
 		//visibility: hidden;
 		//overflow-x: scroll;
 		//border:solid brown;
